# Mingot

./: API_IMPROVEMENTS.md  CHANGELOG.md  COMPONENT_GUIDELINES.md  Cargo.toml  HIGH_PRECISION_PROPOSAL.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  install-hooks.sh  netlify.toml
.githooks/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
demo/: Cargo.toml  Trunk.toml  index.html
demo/src/: app.rs  main.rs  styles.css
demo/src/components/: code_block.rs  copy_button.rs  demo_block.rs  mod.rs  props_table.rs  theme_vars.rs
demo/src/docs/: registry.rs
demo/src/layout/: header.rs  mod.rs  shell.rs  sidebar.rs
demo/src/pages/: component_page.rs  getting_started.rs  home.rs  mod.rs  not_found.rs  theming_custom.rs  theming_overview.rs  theming_presets.rs
docs/: API_IMPROVEMENTS.md  CONTEXT.md  MANTINE_GAP_ANALYSIS.md
src/: cliffy_types.rs  crdt_types.rs  gpu_types.rs  lib.rs
src/cliffy/: angle_state.rs  animation.rs  bridge.rs  gpu.rs  mod.rs  vector_state.rs
src/components/: accordion.rs  action_icon.rs  alert.rs  angle_input.rs  appshell.rs  avatar.rs  badge.rs  banner.rs  breadcrumbs.rs  burger.rs  button.rs  card.rs  checkbox.rs  complex_number_input.rs  container.rs  coordinate_input.rs  divider.rs  drawer.rs  equation_editor.rs  error_page.rs  file_input.rs  footer.rs  formula_input.rs  fraction_input.rs  grid.rs  group.rs  header.rs  hero.rs  input.rs  interval_input.rs  loader.rs  loading_overlay.rs  matrix_input.rs  menu.rs  mod.rs  modal.rs  navbar.rs  notification.rs  number_input.rs  pagination.rs  (+29 more)
src/theme/: builder.rs  color_scheme.rs  colors.rs  mod.rs  override_provider.rs  provider.rs  spacing.rs  tokens.rs  typography.rs  validation.rs
src/theme/presets/: financial.rs  industrial.rs  mingot_dark.rs  mingot_default.rs  mod.rs  scientific.rs
src/utils/: mod.rs  style_builder.rs
src/validation/: mod.rs  validators.rs
tests/: cliffy_geometric_invariants.rs  cliffy_numeric_invariants.rs
