[package]
name = "mingot"
version = "0.1.0"
edition = "2021"
authors = ["Industrial Algebra <noreply@industrial-algebra.org>"]
description = "Leptos UI library for applications demanding mathematical precision - u64+ integers, arbitrary-precision via Amari, zero precision loss"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Industrial-Algebra/Mingot"
keywords = ["leptos", "ui", "precision", "mathematics", "amari"]
categories = ["gui", "web-programming", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
web-sys = { version = "0.3", features = ["HtmlElement", "Window", "Document", "CssStyleDeclaration"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
