[workspace]
members = [".", "demo"]
resolver = "2"

[package]
name = "mingot"
version = "0.4.0"
edition = "2021"
authors = ["Industrial Algebra <noreply@industrial-algebra.org>"]
description = "Leptos UI library for applications demanding mathematical precision - u64+ integers, arbitrary-precision decimals, zero precision loss"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Industrial-Algebra/Mingot"
keywords = ["leptos", "ui", "precision", "mathematics", "decimal"]
categories = ["gui", "web-programming", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
web-sys = { version = "0.3", features = ["HtmlElement", "Window", "Document", "CssStyleDeclaration"] }
wasm-bindgen = "0.2"

# Optional: High-precision decimal arithmetic
rust_decimal = { version = "1.39", optional = true, default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
high-precision = ["rust_decimal"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
