[package]
name = "mingot-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Component documentation and demo site for Mingot"

[dependencies]
mingot = { path = "..", features = ["high-precision"] }
leptos = { version = "0.8.12", features = ["csr"] }
leptos_router = "0.8.9"
leptos_meta = "0.8.5"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Clipboard",
    "Navigator",
    "HtmlElement",
    "console",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
